--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 
 <body>
-  <h1>
+  <header class="header">
+    <nav class="nav__bar">
+      <div class="nav">
+        <a href="#">Home</a>
+      </div>
+      <div class="nav">
+        <a href="#">About</a>
+      </div>
+      <div class="nav">
+        <a href="#">Skills</a>
+      </div>
+      <div class="nav">
+        <a href="#">Resume</a>
+      </div>
+      <div class="nav">
+        <a href="#">Contact</a>
+      </div>
+    </nav>
+  </header>
+  <h1 class="heading">
     This is the personal portfolio website
   </h1>
 </body>
