--- a/index.html
+++ b/index.html
@@ -11,26 +11,16 @@
 <body>
   <header class="header">
     <nav class="nav__bar">
-      <div class="nav">
-        <a href="#">Home</a>
-      </div>
-      <div class="nav">
-        <a href="#">About</a>
-      </div>
-      <div class="nav">
-        <a href="#">Skills</a>
-      </div>
-      <div class="nav">
-        <a href="#">Resume</a>
-      </div>
-      <div class="nav">
-        <a href="#">Contact</a>
-      </div>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="">Resume</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
     </nav>
   </header>
-  <h1 class="heading">
-    This is the personal portfolio website
   </h1>
+  <footer class="footer">
+  </footer>
 </body>
 
 </html>
