--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="playground.css">
 </head>
 
 <body>
-  <header class="header">
-    <nav class="nav__bar">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="">Resume</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-  </h1>
-  <footer class="footer">
-  </footer>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Project</a>
+    <a href="#">Resume</a>
+    <a href="#">Contact</a>
+    <span></span>
+  </nav>
+
 </body>
 
 </html>
